--- a/compose.yml
+++ b/compose.yml
@@ -1,13 +1,19 @@
+version:'3'
+
 networks:
     myapp-network:
+
 volumes:
     db-data:
+
 services:
   web:
       build: .
       command: bundle exec rails s -p 3000 -b '0.0.0.0'
       ports:
         - '3000:3000'
+      networks:
+        -  myapp-network 
       environment:
         -  'DATEBASE_PASSWORD=postgres'
       volumes:
@@ -23,5 +29,4 @@ services:
     environment:
       - 'POSTGRES_USER=postgres'
       - 'POSTGRES_PASSWORD=postgres'  
-    networks: 
-      -  myapp-network   
+
