--- a/compose.yml
+++ b/compose.yml
@@ -1,8 +1,5 @@
 version:'3'
 
-networks:
-    myapp-network:
-
 volumes:
     db-data:
 
@@ -13,20 +10,24 @@ services:
       ports:
         - '3000:3000'
       networks:
-        -  myapp-network 
+        - 'myapp-network' 
       environment:
         -  'DATEBASE_PASSWORD=postgres'
       volumes:
-        - '.:/myapp'
+        - '.:/rails-docker'
       tty: true  
       stdin_open: true          
       depends_on:
         - db
+      links:
+        - db  
   db:
     image: postgres:12
     volumes:
       - 'db-data:/var/lib/postgresql/data'
     environment:
       - 'POSTGRES_USER=postgres'
-      - 'POSTGRES_PASSWORD=postgres'  
+      - 'POSTGRES_PASSWORD=postgres' 
+    networks:
+      -  'myapp-network'   
 
