--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   web:
     build: .
     command: >
-      bash -c "rm -f tmp/pids/server.pid && rails db:create && rails db:migrate && rails s -b 0.0.0.0"
+      bash -c "rm -f tmp/pids/server.pid && rails db:migrate && rails s -b 0.0.0.0"
     ports:
       - '3000:3000'
     volumes:
