--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,7 @@ services:
   web:
     build: .
     command: >
-      bash -c "rm -f tmp/pids/server.pid && rails db:migrate && rails s -b 0.0.0.0"
-    ports:
+      bash -c "if [ ! -f tmp/initial_db_setup_done ]; then rails db:create db:migrate && touch tmp/initial_db_setup_done; fi && rm -f tmp/pids/server.pid && rails s -b 0.0.0.0"
       - '3000:3000'
     volumes:
       - '.:/rails-docker'
