4回目レビュー後修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,8 @@ services:
   web:
     build: .
     command: >
-      bash -c "if [ ! -f tmp/initial_db_setup_done ]; then rails db:create db:migrate && touch tmp/initial_db_setup_done; fi && rm -f tmp/pids/server.pid && rails s -b 0.0.0.0"
+      bash -c "if [ ! -f tmp/initial_db_setup_done ]; then rails db:migrate && touch tmp/initial_db_setup_done; fi && rm -f tmp/pids/server.pid && rails s -b 0.0.0.0"
+    ports:
       - '3000:3000'
     volumes:
       - '.:/rails-docker'
@@ -27,3 +28,4 @@ services:
       - db
     links:
       - db
+
